# bob

./: .gitignore  README.md  notes.md  pyproject.toml  tox.ini
benchmarks/: benchmark_kv_cache.py  benchmark_rmsnorm.py
bob/: __init__.py  bitlinear.py  bob.py  config.py  moe.py  quantization.py  transformer.py  utils.py
bob/kernels/: __init__.py  rms_norm.py
tests/: test_attn.py  test_integration.py  test_mock.py
tests/kernels/: test_fused.py
